main_container_for_spanioquest/react_server.log

> react-kavia@0.1.0 start
> react-scripts start

(node:3149) [DEP_WEBPACK_DEV_SERVER_ON_AFTER_SETUP_MIDDLEWARE] DeprecationWarning: 'onAfterSetupMiddleware' option is deprecated. Please use the 'setupMiddlewares' option.
(Use `node --trace-deprecation ...` to show where the warning was created)
(node:3149) [DEP_WEBPACK_DEV_SERVER_ON_BEFORE_SETUP_MIDDLEWARE] DeprecationWarning: 'onBeforeSetupMiddleware' option is deprecated. Please use the 'setupMiddlewares' option.
Starting the development server...

Compiled successfully!

You can now view react-kavia in the browser.

  Local:            http://localhost:3000
  On Your Network:  http://172.17.0.2:3000

Note that the development build is not optimized.
To create a production build, use npm run build.

webpack compiled successfully
Compiling...
Compiled successfully!
webpack compiled successfully
Compiling...
Compiled successfully!
webpack compiled successfully
Compiling...
Compiled successfully!
webpack compiled successfully
Compiling...
Compiled with warnings.

[eslint] 
src/App.js
  Line 3:10:  'Tooltip' is defined but never used  no-unused-vars

Search for the keywords to learn more about each warning.
To ignore, add // eslint-disable-next-line to the line before.

WARNING in [eslint] 
src/App.js
  Line 3:10:  'Tooltip' is defined but never used  no-unused-vars

webpack compiled with 1 warning
Compiling...
Compiled with warnings.

[eslint] 
src/App.js
  Line 3:10:  'Tooltip' is defined but never used  no-unused-vars

Search for the keywords to learn more about each warning.
To ignore, add // eslint-disable-next-line to the line before.

WARNING in [eslint] 
src/App.js
  Line 3:10:  'Tooltip' is defined but never used  no-unused-vars

webpack compiled with 1 warning
Compiling...
Compiled successfully!
webpack compiled successfully
Compiling...
Compiled successfully!
webpack compiled successfully
Compiling...
Compiled successfully!
webpack compiled successfully
Compiling...
Compiled successfully!
webpack compiled successfully
Compiling...
Compiled successfully!
webpack compiled successfully
Compiling...
Compiled successfully!
webpack compiled successfully
Compiling...
Compiled with warnings.

[eslint] 
src/App.js
  Line 16:8:  'TranslatableText' is defined but never used  no-unused-vars

Search for the keywords to learn more about each warning.
To ignore, add // eslint-disable-next-line to the line before.

WARNING in [eslint] 
src/App.js
  Line 16:8:  'TranslatableText' is defined but never used  no-unused-vars

webpack compiled with 1 warning
Compiling...
Compiled successfully!
webpack compiled successfully
Compiling...
Failed to compile.

[eslint] 
src/App.js
Syntax error: Unexpected token (14:0) (14:undefined)
ERROR in ./src/App.js
Module build failed (from ./node_modules/babel-loader/lib/index.js):
SyntaxError: /home/kavia/workspace/code-generation/spanioquest-6988-6994/main_container_for_spanioquest/src/App.js: Unexpected token (14:0)

  12 | import { userProgress, lessons } from './data/mockData';
  13 | import { getTranslation } from './utils/translationUtils';
> 14 | =======
     | ^
  15 |
  16 | function App() {
  17 |   const [activeTab, setActiveTab] = useState('learn');
    at constructor (/home/kavia/workspace/code-generation/spanioquest-6988-6994/main_container_for_spanioquest/node_modules/@babel/parser/lib/index.js:360:19)
    at FlowParserMixin.raise (/home/kavia/workspace/code-generation/spanioquest-6988-6994/main_container_for_spanioquest/node_modules/@babel/parser/lib/index.js:3327:19)
    at FlowParserMixin.unexpected (/home/kavia/workspace/code-generation/spanioquest-6988-6994/main_container_for_spanioquest/node_modules/@babel/parser/lib/index.js:3347:16)
    at FlowParserMixin.parseExprAtom (/home/kavia/workspace/code-generation/spanioquest-6988-6994/main_container_for_spanioquest/node_modules/@babel/parser/lib/index.js:11126:16)
    at FlowParserMixin.parseExprAtom (/home/kavia/workspace/code-generation/spanioquest-6988-6994/main_container_for_spanioquest/node_modules/@babel/parser/lib/index.js:6937:20)
    at FlowParserMixin.parseExprSubscripts (/home/kavia/workspace/code-generation/spanioquest-6988-6994/main_container_for_spanioquest/node_modules/@babel/parser/lib/index.js:10758:23)
    at FlowParserMixin.parseUpdate (/home/kavia/workspace/code-generation/spanioquest-6988-6994/main_container_for_spanioquest/node_modules/@babel/parser/lib/index.js:10743:21)
    at FlowParserMixin.parseMaybeUnary (/home/kavia/workspace/code-generation/spanioquest-6988-6994/main_container_for_spanioquest/node_modules/@babel/parser/lib/index.js:10723:23)
    at FlowParserMixin.parseMaybeUnaryOrPrivate (/home/kavia/workspace/code-generation/spanioquest-6988-6994/main_container_for_spanioquest/node_modules/@babel/parser/lib/index.js:10576:61)
    at FlowParserMixin.parseExprOps (/home/kavia/workspace/code-generation/spanioquest-6988-6994/main_container_for_spanioquest/node_modules/@babel/parser/lib/index.js:10581:23)
    at FlowParserMixin.parseMaybeConditional (/home/kavia/workspace/code-generation/spanioquest-6988-6994/main_container_for_spanioquest/node_modules/@babel/parser/lib/index.js:10558:23)
    at FlowParserMixin.parseMaybeAssign (/home/kavia/workspace/code-generation/spanioquest-6988-6994/main_container_for_spanioquest/node_modules/@babel/parser/lib/index.js:10521:21)
    at FlowParserMixin.parseMaybeAssign (/home/kavia/workspace/code-generation/spanioquest-6988-6994/main_container_for_spanioquest/node_modules/@babel/parser/lib/index.js:5773:18)
    at FlowParserMixin.parseExpressionBase (/home/kavia/workspace/code-generation/spanioquest-6988-6994/main_container_for_spanioquest/node_modules/@babel/parser/lib/index.js:10475:23)
    at /home/kavia/workspace/code-generation/spanioquest-6988-6994/main_container_for_spanioquest/node_modules/@babel/parser/lib/index.js:10471:39
    at FlowParserMixin.allowInAnd (/home/kavia/workspace/code-generation/spanioquest-6988-6994/main_container_for_spanioquest/node_modules/@babel/parser/lib/index.js:12095:16)
    at FlowParserMixin.parseExpression (/home/kavia/workspace/code-generation/spanioquest-6988-6994/main_container_for_spanioquest/node_modules/@babel/parser/lib/index.js:10471:17)
    at FlowParserMixin.parseStatementContent (/home/kavia/workspace/code-generation/spanioquest-6988-6994/main_container_for_spanioquest/node_modules/@babel/parser/lib/index.js:12539:23)
    at FlowParserMixin.parseStatementLike (/home/kavia/workspace/code-generation/spanioquest-6988-6994/main_container_for_spanioquest/node_modules/@babel/parser/lib/index.js:12406:17)
    at FlowParserMixin.parseStatementLike (/home/kavia/workspace/code-generation/spanioquest-6988-6994/main_container_for_spanioquest/node_modules/@babel/parser/lib/index.js:5140:24)
    at FlowParserMixin.parseModuleItem (/home/kavia/workspace/code-generation/spanioquest-6988-6994/main_container_for_spanioquest/node_modules/@babel/parser/lib/index.js:12383:17)
    at FlowParserMixin.parseBlockOrModuleBlockBody (/home/kavia/workspace/code-generation/spanioquest-6988-6994/main_container_for_spanioquest/node_modules/@babel/parser/lib/index.js:12960:36)
    at FlowParserMixin.parseBlockBody (/home/kavia/workspace/code-generation/spanioquest-6988-6994/main_container_for_spanioquest/node_modules/@babel/parser/lib/index.js:12953:10)
    at FlowParserMixin.parseProgram (/home/kavia/workspace/code-generation/spanioquest-6988-6994/main_container_for_spanioquest/node_modules/@babel/parser/lib/index.js:12280:10)
    at FlowParserMixin.parseTopLevel (/home/kavia/workspace/code-generation/spanioquest-6988-6994/main_container_for_spanioquest/node_modules/@babel/parser/lib/index.js:12270:25)
    at FlowParserMixin.parseTopLevel (/home/kavia/workspace/code-generation/spanioquest-6988-6994/main_container_for_spanioquest/node_modules/@babel/parser/lib/index.js:5909:28)
    at FlowParserMixin.parse (/home/kavia/workspace/code-generation/spanioquest-6988-6994/main_container_for_spanioquest/node_modules/@babel/parser/lib/index.js:14120:10)
    at parse (/home/kavia/workspace/code-generation/spanioquest-6988-6994/main_container_for_spanioquest/node_modules/@babel/parser/lib/index.js:14154:38)
    at parser (/home/kavia/workspace/code-generation/spanioquest-6988-6994/main_container_for_spanioquest/node_modules/@babel/core/lib/parser/index.js:41:34)
    at parser.next (<anonymous>)
    at normalizeFile (/home/kavia/workspace/code-generation/spanioquest-6988-6994/main_container_for_spanioquest/node_modules/@babel/core/lib/transformation/normalize-file.js:64:37)
    at normalizeFile.next (<anonymous>)
    at run (/home/kavia/workspace/code-generation/spanioquest-6988-6994/main_container_for_spanioquest/node_modules/@babel/core/lib/transformation/index.js:22:50)
    at run.next (<anonymous>)
    at transform (/home/kavia/workspace/code-generation/spanioquest-6988-6994/main_container_for_spanioquest/node_modules/@babel/core/lib/transform.js:22:33)
    at transform.next (<anonymous>)
    at step (/home/kavia/workspace/code-generation/spanioquest-6988-6994/main_container_for_spanioquest/node_modules/gensync/index.js:261:32)
    at /home/kavia/workspace/code-generation/spanioquest-6988-6994/main_container_for_spanioquest/node_modules/gensync/index.js:273:13
    at async.call.result.err.err (/home/kavia/workspace/code-generation/spanioquest-6988-6994/main_container_for_spanioquest/node_modules/gensync/index.js:223:11)

ERROR in [eslint] 
src/App.js
  Line 14:  Parsing error: Unexpected token (14:0)

webpack compiled with 2 errors
